# MVE386

./: .gitignore  CMakeLists.txt  README.md  dosage.py  dosage_geant.py  env.yml  environment.yml  export_scene_vtk.py  gvxr_setup.py  heat.py  heat_geant.py  heat_gvxr.py  helper_asciistl.py  helper_scalestl.py  log.out  log_acq.out  log_beam.out  log_energy.out  log_exp.out  log_radiolisys.out  log_size.out  radiolisys.py  radiolysis_geant.py  run.sh  run_acq.sh  run_beam.sh  run_energy.sh  run_exp.sh  run_old.sh  run_radiolysis.sh  run_size.sh  setup.json  setup.py  temperature.py  test.py
LaTeX/: implementation.tex  results.tex
data/: Artorias_done.stl  Artorias_done_scaled.stl
docs/: links.txt
include/: ActionInitialization.hh  DetectorConstruction.hh  DoseVoxelGrid.hh  GenVTI.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SceneConfig.hh  SteppingAction.hh  json.hpp
output/: dose.vti  dose_setup_acq_fly.vti  dose_setup_acq_fly_dose_Gy.npy  dose_setup_acq_fly_dose_Gy.vti  dose_setup_acq_step1.vti  dose_setup_acq_step1_dose_Gy.npy  dose_setup_acq_step1_dose_Gy.vti  dose_setup_acq_step5.vti  dose_setup_acq_step5_dose_Gy.npy  dose_setup_acq_step5_dose_Gy.vti  dose_setup_beam_point_baseline.vti  dose_setup_beam_point_baseline_dose_Gy.npy  dose_setup_beam_point_baseline_dose_Gy.vti  dose_setup_energy_100keV.vti  dose_setup_energy_100keV_dose_Gy.npy  dose_setup_energy_100keV_dose_Gy.vti  dose_setup_energy_25keV.vti  dose_setup_energy_25keV_dose_Gy.npy  dose_setup_energy_25keV_dose_Gy.vti  dose_setup_exp1.vti  dose_setup_grid10.vti  dose_setup_grid100.vti  (+81 more)
(+53 files in other folders)
